# AgenticTrading

./: .dockerignore  .env.example  .gitignore  Architecture.md  BUILD.md  Deploy.md  Dockerfile  KICKOFF.md  Plan.md  README.md  TASKS.md  TUTORIAL.md  fly.toml  gbrain_seed_interface.md  pyproject.toml  requirements.txt  run_candidate_generator.py  run_comovement_load.py  run_flagger.py  run_freshness_smoke.py  run_polygon_smoke.py  run_segment_load.py  run_tearsheet_populator.py  run_tnic_load.py
.claude/commands/: gbrain.md
.claude/skills/entity-resolution/: SKILL.md
.claude/skills/point-in-time-discipline/: SKILL.md
.claude/skills/run-pipeline/: SKILL.md
FinAgents/memory/: gbrain_cli.py  intelligent_memory_indexer.py  interface.py  llm_research_service.py  memory_server.py  unified_database_manager.py
FinAgents/memory_testing/: accuracy_testing.py  latency_test.py
FinAgents/orchestrator/: finagent_cli.py
FinAgents/orchestrator_demo/: orchestrator.py
blind_spot/: candidate_generator.py  comovement_loader.py  entity_resolution.py  eval.py  flagger.py  graph_loader.py  market_data.py  segment_loader.py  signals.py
blind_spot/fbrain/: mcp_server.py
blind_spot/flag_stream/: __init__.py  artifact.tsx  mcp_server.py  persistence.py  preview.py  seed_fake.py
blind_spot/tests/: test_candidate_generator.py  test_comovement_loader.py  test_entity_resolution.py  test_eval.py  test_flagger.py  test_graph_loader.py  test_market_data.py  test_polygon_bar_source.py  test_segment_loader.py  test_signals.py  test_wrds_smoke.py
scripts/: setup_neo4j.py
(+20 files in other folders)
