[project]
name = "blind-spot"
version = "0.5.0"
description = "Morning copilot that surfaces names a financial analyst is at risk of omitting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.1",
    "neo4j>=5.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
pipeline = [
    "wrds>=3.2",
    "pandas>=2.0",
    "numpy>=1.26",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: requires live WRDS credentials; run with -m integration",
]
